--- a/public/index.html
+++ b/public/index.html
@@ -4,7 +4,10 @@
     <meta charset="utf-8">
     <link rel="shortcut icon" href="/favicon.ico">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-
+    <meta property="og:title" content="Prisoners">
+    <meta property="og:description" content="Play Prisoner's Dilemma online">
+    <meta property="og:image" content="/logo.jpg">
+    <meta property="og:url" content="https://dilemma.joaquimdsouza.com">
     <title>Prisoners</title>
     <script src='https://www.google.com/recaptcha/api.js?render=%REACT_APP_RECAPTCHA_SITE_KEY%'></script>
 </head>
