--- a/public/index.html
+++ b/public/index.html
@@ -7,6 +7,8 @@
     <meta property="og:title" content="Prisoners">
     <meta property="og:description" content="Play Prisoner's Dilemma online">
     <meta property="og:image" content="/logo.jpg">
+    <meta property="og:image:width" content="256">
+    <meta property="og:image:height" content="172">
     <meta property="og:url" content="https://dilemma.joaquimdsouza.com">
     <title>Prisoners</title>
     <script src='https://www.google.com/recaptcha/api.js?render=%REACT_APP_RECAPTCHA_SITE_KEY%'></script>
