--- a/public/index.html
+++ b/public/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta property="og:title" content="Prisoners">
     <meta property="og:description" content="Play Prisoner's Dilemma online">
+    <meta property="og:type" content="website" />
     <meta property="og:image" content="/logo.jpg">
     <meta property="og:image:width" content="256">
     <meta property="og:image:height" content="172">
