--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,7 @@
     <meta property="og:title" content="Prisoners">
     <meta property="og:description" content="Play Prisoner's Dilemma online">
     <meta property="og:type" content="website" />
-    <meta property="og:image" content="/logo.jpg">
+    <meta property="og:image" content="https://dilemma.joaquimdsouza.com/logo.jpg">
     <meta property="og:image:width" content="256">
     <meta property="og:image:height" content="172">
     <meta property="og:url" content="https://dilemma.joaquimdsouza.com">
