--- a/public/index.html
+++ b/public/index.html
@@ -4,14 +4,14 @@
     <meta charset="utf-8">
     <link rel="shortcut icon" href="/favicon.ico">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <meta property="og:title" content="Prisoners">
+    <meta property="og:title" content="Anon's Dilemma">
     <meta property="og:description" content="Play Prisoner's Dilemma online">
     <meta property="og:type" content="website" />
     <meta property="og:image" content="https://dilemma.joaquimdsouza.com/logo.jpg">
     <meta property="og:image:width" content="300">
     <meta property="og:image:height" content="200">
     <meta property="og:url" content="https://dilemma.joaquimdsouza.com">
-    <title>Prisoners</title>
+    <title>Anon's Dilemma</title>
     <script src='https://www.google.com/recaptcha/api.js?render=%REACT_APP_RECAPTCHA_SITE_KEY%'></script>
 </head>
 <body>
